--- a/app/src/main/res/layout/activity_json.xml
+++ b/app/src/main/res/layout/activity_json.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".JsonActivity">
+    android:background="@color/colorPrimaryDark"
+    tools:context="com.sample.firstapp.JsonActivity">
 
 
     <EditText
@@ -81,6 +82,7 @@
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
         android:clickable="true"
+        android:src="@android:drawable/ic_menu_send"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         tools:srcCompat="@tools:sample/backgrounds/scenic" />
