--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
-    tools:context=".MainActivity">
+    tools:context="com.sample.firstapp.MainActivity">
 
     <EditText
         android:id="@+id/editText"
@@ -38,9 +38,20 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="47dp"
         android:layout_marginEnd="24dp"
-        android:text="Show Json"
+        android:text="@string/show_json"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText" />
+
+    <Button
+        android:id="@+id/btn_go_to_fragments"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="38dp"
+        android:layout_marginHorizontal="24dp"
+        android:text="@string/go_to_fragments"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_json_view" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
